--- a/packages/survey-creator-core/src/responsivity.scss
+++ b/packages/survey-creator-core/src/responsivity.scss
@@ -120,16 +120,4 @@
       border: 0;
     }
   }
-
-  .svc-page__content-actions {
-    .svc-page-toolbar {
-      padding-right: calcSize(1);
-
-      .sv-action {
-        .sv-action__content {
-          padding-right: 0;
-        }
-      }
-    }
-  }
 }
